--- a/index.html
+++ b/index.html
@@ -24,196 +24,196 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="nav-bar">
-      <h3>JIJU</h3>
-      <div class="nav-items">
-        <a href="#">Products</a>
-        <a href="#">Solutions</a>
-        <a href="#">Community</a>
-        <a href="#">Resources</a>
-        <a href="#">Pricing</a>
-      </div>
-      <!-- <div class="hamburger">
+    <div class="container">
+      <header class="nav-bar">
+        <h3>JIJU</h3>
+        <div class="nav-items">
+          <a href="#">Products</a>
+          <a href="#">Solutions</a>
+          <a href="#">Community</a>
+          <a href="#">Resources</a>
+          <a href="#">Pricing</a>
+        </div>
+        <!-- <div class="hamburger">
         <i class="fa-solid fa-bars"></i>
       </div> -->
-      <div class="buttons">
-        <button class="secondary-button">Sign in</button>
-        <button class="primary-button">Get a demo</button>
-      </div>
-    </header>
-
-    <div class="hero">
-      <h1 class="hero-text">Contact the Jiju Team</h1>
-    </div>
-
-    <div class="help">
-      <div class="help-center">
-        <h5>HELP CENTER</h5>
-        <p>Advice and answers from <br />Jiju team</p>
-        <div class="action">
-          <a href="#">Get Help</a>
+        <div class="buttons">
+          <button class="secondary-button">Sign in</button>
+          <button class="primary-button">Get a demo</button>
         </div>
+      </header>
+
+      <div class="hero">
+        <h1 class="hero-text">Contact the Jiju Team</h1>
       </div>
-      <div class="live-chat">
-        <h5>TALK TO SALES</h5>
-        <p>
-          Our sales team can answer your <br />questions and show you Jiju in
-          action
-        </p>
-        <div class="action">
-          <a href="#">Live Chat</a>
-        </div>
-      </div>
-    </div>
 
-    <hr />
-
-    <div class="inquiries">
-      <h2>General inquiries</h2>
-      <p>
-        Feel free to contact us with questions, potential partnerships or media
-        inquiries. We'll be in touch as <br />
-        soon as wee can. If your query is urgent, please use the Support or
-        Sales link above.
-      </p>
-    </div>
-
-    <div class="form">
-      <form action="">
-        <div class="name">
-          <div class="firstName">
-            <label for="firstName">First Name *</label>
-            <input type="text" class="first-name" id="firstName" />
-          </div>
-          <div class="lastName">
-            <label for="lastName">Last Name *</label>
-            <input type="text" class="last-name" id="lastName" />
+      <div class="help">
+        <div class="help-center">
+          <h5>HELP CENTER</h5>
+          <p>Advice and answers from <br />Jiju team</p>
+          <div class="action">
+            <a href="#">Get Help</a>
           </div>
         </div>
-
-        <div class="mail">
-          <label for="work" class="email">Work Email *</label>
-          <input type="text" class="work-email" name="work" />
-        </div>
-
-        <div class="company-mail">
-          <label for="email" class="email">Company Name *</label>
-          <input type="email" class="company-name" name="email" />
-        </div>
-
-        <div class="message">
-          <label for="textArea" class="text-label">Message *</label>
-          <textarea id="textArea" cols="30" rows="10"></textarea>
-        </div>
-        <div class="button">
-          <button class="submit-button">Submit</button>
-        </div>
-      </form>
-    </div>
-
-    <div class="location">
-      <h2 class="heading">Juro office locations</h2>
-
-      <div class="sections">
-        <div class="first-location">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31766.20576002847!2d-0.18113544999999998!3d5.600116750000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sgh!4v1673673161271!5m2!1sen!2sgh"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-
-          <p class="location-text">Achimota Old Station, Accra Central</p>
-        </div>
-
-        <div class="second-location">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31766.20576002847!2d-0.18113544999999998!3d5.600116750000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sgh!4v1673673161271!5m2!1sen!2sgh"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-          <p class="location-text">Achimota Old Station, Accra Central</p>
-        </div>
-      </div>
-    </div>
-
-    <footer class="footer">
-      <div class="elements">
-        <div class="logos">
-          <h3>JIJU</h3>
-
-          <div class="social">
-            <i class="fa-brands fa-twitter icon"></i>
-            <i class="fa-brands fa-linkedin icon"></i>
-            <i class="fa-brands fa-youtube icon"></i>
-            <i class="fa-brands fa-github icon"></i>
-          </div>
-        </div>
-
-        <div class="product">
-          <a href="#" class="main">Product</a>
-          <a href="#">Pricing</a>
-          <a href="#">Integrations</a>
-          <a href="#">Open API</a>
-          <a href="#">Template editor</a>
-          <a href="#">Approval workflows</a>
-          <a href="#">Negotiation</a>
-          <a href="#">Native eSignature</a>
-          <a href="#">Smart storage</a>
-          <a href="#"> Renewal reminders</a>
-        </div>
-        
-        <div class="resources">
-          <a href="#" class="main">Resources</a>
-          <a href="#">Community</a>
-          <a href="#">Case Studies</a>
-          <a href="#">Blog</a>
-          <a href="#">eBooks & guides</a>
-          <a href="#">Templates</a>
-          <a href="#">Help center</a>
-          <a href="#">Juro center</a>
-          <a href="#">Contract health check</a>
-          <a href="#">Release notes</a>
-        </div>
-
-        <div class="solutions">
-          <a href="#" class="main">Solutions</a>
-          <a href="#">Legal</a>
-          <a href="#">Sales</a>
-          <a href="#">HR</a>
-          <a href="#">Finance & ops</a>
-        </div>
-
-        
-
-        <div class="company">
-          <a href="#" class="main">Company</a>
-          <a href="#">Careers</a>
-          <a href="#">Media asssets</a>
-          <a href="#" style="color: rgb(6, 41, 70); font-weight: bold"
-            >Contact Us</a
-          >
-        </div>
-      </div>
-      <div class="last">
-        <div class="copyright">
+        <div class="live-chat">
+          <h5>TALK TO SALES</h5>
           <p>
-            <i class="fa-regular fa-copyright"></i>Jiju, All rights reserved
+            Our sales team can answer your <br />questions and show you Jiju in
+            action
           </p>
-        </div>
-        <div class="others">
-          <p class="privacy">Privacy Policy</p>
-          <p>Terms of service</p>
+          <div class="action">
+            <a href="#">Live Chat</a>
+          </div>
         </div>
       </div>
-    </footer>
+
+      <hr />
+
+      <div class="inquiries">
+        <h2>General inquiries</h2>
+        <p>
+          Feel free to contact us with questions, potential partnerships or
+          media inquiries. We'll be in touch as <br />
+          soon as wee can. If your query is urgent, please use the Support or
+          Sales link above.
+        </p>
+      </div>
+
+      <div class="form">
+        <form action="">
+          <div class="name">
+            <div class="firstName">
+              <label for="firstName">First Name *</label>
+              <input type="text" class="first-name" id="firstName" />
+            </div>
+            <div class="lastName">
+              <label for="lastName">Last Name *</label>
+              <input type="text" class="last-name" id="lastName" />
+            </div>
+          </div>
+
+          <div class="mail">
+            <label for="work" class="email">Work Email *</label>
+            <input type="text" class="work-email" name="work" />
+          </div>
+
+          <div class="company-mail">
+            <label for="email" class="email">Company Name *</label>
+            <input type="email" class="company-name" name="email" />
+          </div>
+
+          <div class="message">
+            <label for="textArea" class="text-label">Message *</label>
+            <textarea id="textArea" cols="30" rows="10"></textarea>
+          </div>
+          <div class="button">
+            <button class="submit-button">Submit</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="location">
+        <h2 class="heading">Juro office locations</h2>
+
+        <div class="sections">
+          <div class="first-location">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31766.20576002847!2d-0.18113544999999998!3d5.600116750000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sgh!4v1673673161271!5m2!1sen!2sgh"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+
+            <p class="location-text">Achimota Old Station, Accra Central</p>
+          </div>
+
+          <div class="second-location">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31766.20576002847!2d-0.18113544999999998!3d5.600116750000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sgh!4v1673673161271!5m2!1sen!2sgh"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+            <p class="location-text">Achimota Old Station, Accra Central</p>
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <div class="elements">
+          <div class="logos">
+            <h3>JIJU</h3>
+
+            <div class="social">
+              <i class="fa-brands fa-twitter icon"></i>
+              <i class="fa-brands fa-linkedin icon"></i>
+              <i class="fa-brands fa-youtube icon"></i>
+              <i class="fa-brands fa-github icon"></i>
+            </div>
+          </div>
+
+          <div class="product">
+            <a href="#" class="main">Product</a>
+            <a href="#">Pricing</a>
+            <a href="#">Integrations</a>
+            <a href="#">Open API</a>
+            <a href="#">Template editor</a>
+            <a href="#">Approval workflows</a>
+            <a href="#">Negotiation</a>
+            <a href="#">Native eSignature</a>
+            <a href="#">Smart storage</a>
+            <a href="#"> Renewal reminders</a>
+          </div>
+
+          <div class="resources">
+            <a href="#" class="main">Resources</a>
+            <a href="#">Community</a>
+            <a href="#">Case Studies</a>
+            <a href="#">Blog</a>
+            <a href="#">eBooks & guides</a>
+            <a href="#">Templates</a>
+            <a href="#">Help center</a>
+            <a href="#">Juro center</a>
+            <a href="#">Contract health check</a>
+            <a href="#">Release notes</a>
+          </div>
+
+          <div class="solutions">
+            <a href="#" class="main">Solutions</a>
+            <a href="#">Legal</a>
+            <a href="#">Sales</a>
+            <a href="#">HR</a>
+            <a href="#">Finance & ops</a>
+          </div>
+
+          <div class="company">
+            <a href="#" class="main">Company</a>
+            <a href="#">Careers</a>
+            <a href="#">Media asssets</a>
+            <a href="#" style="color: rgb(6, 41, 70); font-weight: bold"
+              >Contact Us</a
+            >
+          </div>
+        </div>
+        <div class="last">
+          <div class="copyright">
+            <p>
+              <i class="fa-regular fa-copyright"></i>Jiju, All rights reserved
+            </p>
+          </div>
+          <div class="others">
+            <p class="privacy">Privacy Policy</p>
+            <p>Terms of service</p>
+          </div>
+        </div>
+      </footer>
+    </div>
 
     <script src="" async defer></script>
   </body>
